syntax = "proto3";

package microshopping;
option go_package = "./proto;microshopping";

// ------------- Ad service for advertising access ------------------

// Service
service AdService {
    rpc GetAds(AdRequest) returns (AdResponse) {}
}

// Request AD msg
message AdRequest {
    // repeated表示生成切片
    repeated string context_keys = 1;
}

// response AD msg
message AdResponse {
    // repeated表示生成切片，引用下面的Ad消息
    repeated Ad ads = 1;
}

// AD msg
message Ad {
    // 重定向url
    string redirect_url = 1;
    // 广告内容
    string text = 2;
}
