syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

// Current Currency Description
message Money {
  // Currency code e.g. EUR,USD 
  string currency_code = 1;

  // Currency unit
  // ex: if currencyCode is USD, then 1 unit is 1 dollar.
  int64 units = 2;

  // Quantity in nanometer (10^-9) units.
  // The value must be between -9999999999 and +9999999999.
  // If the unit is positive, nanometers must be positive or zero.
  // If the units are zero, nanometers can be positive, zero, or negative.
  // If the unit is negative, the nanometer must be negative or zero.

  // ex: $-1.75 is expressed as Units = -1 and Nano = -75000000.
  int32 nanos = 3;
}

message Empty {}

// ----------Recommendation service----------

// Interface
service RecommendationService {
  rpc ListRecommendations(ListRecommendationsRequest)
      returns (ListRecommendationsResponse) {}
}

message ListRecommendationsRequest {
  string user_id = 1;
  repeated string product_ids = 2;
}

message ListRecommendationsResponse { repeated string product_ids = 1; }

// ---------------Product Catalog (It's used in the recommendation)----------------

service ProductCatalogService {
  rpc ListProducts(Empty) returns (ListProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (Product) {}
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse) {}
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  Money price_usd = 5;
  repeated string categories = 6;
}

message ListProductsResponse { repeated Product products = 1; }

message GetProductRequest { string id = 1; }

message SearchProductsRequest { string query = 1; }

message SearchProductsResponse { repeated Product results = 1; }
